# autonode

./: .cursorignore  .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT.md  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.docs/: ARCHITECTURE.md
_docs/: ARCHITECTURE.md  STATUS.md  VISION.md
config/: agents.yaml  workflow.yaml
config_examples/: agents.yaml  workflow.yaml
docker/: sandbox.Dockerfile
scripts/: dev.py  test_mcp.sh
src/autonode/: __init__.py  __main__.py  bootstrap.py  server.py
src/autonode/application/: __init__.py  graph.py  graph_factory.py  post_processing.py  workflow.py  workflow_state.py
src/autonode/application/agents/: __init__.py  nodes.py
src/autonode/application/use_cases/: cleanup_uc.py  run_workflow_uc.py
src/autonode/application/workflow/: __init__.py  builder.py  post_processing.py  state.py
src/autonode/core/: __init__.py  constants.py  exceptions.py  logging.py  models.py  ports.py
src/autonode/core/agents/: __init__.py  models.py  parser.py  ports.py
src/autonode/infrastructure/: __init__.py  config_loader.py  tracing.py  workflow_loader.py
src/autonode/presentation/: __init__.py  api.py  cli.py  models.py
tests/: README.md  __init__.py  conftest.py  test_agent_factory_structured_output.py  test_agent_thought.py  test_agents_parser.py  test_aider.py  test_api.py  test_application_agent_nodes.py  test_cli.py  test_codebase_search.py  test_container_tool.py  test_factory_registry.py  test_git_worktree_provider.py  test_host_bind_paths.py  test_ignore_rules.py  test_mcp_server.py  test_path_guard.py  test_post_processing.py  test_presentation_models.py  test_repo_resolution.py  test_repository_map.py  test_run_workflow_uc.py  test_sandbox_docker_adapter.py  test_session_logging.py  test_session_paths.py  test_token_budget_callback.py  test_tool_registry_sandbox.py  test_workflow_factory.py  test_workflow_reviewer_routing.py  test_workflow_schema.py  test_workflow_state_telemetry.py  test_workflow_yaml_load.py  test_workspace_cleanup.py
tests/stubs/: __init__.py  agent_factory.py  session_logger.py  vcs_provider.py
tests/testdata/: agents.yaml  workflow.yaml  workflow_default.yaml
(+61 files in other folders)
